--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -27,3 +27,20 @@ body {
     color: #000;
     padding: 0.2em 0;
 }
+
+#video-canvas {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+}
+
+#video-element {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin: -180px 0 0 -240px;
+}
