Now only displaying canvas with a video element

--- a/app/scripts/templates/videoTemplate.html
+++ b/app/scripts/templates/videoTemplate.html
@@ -1,4 +1,5 @@
 <canvas id="video-canvas"></canvas>
-<video id="video-element" controls loop>
+<video id="video-element">
+  Your browser does not support the video element.
   <source src="images/film.mp4" type="video/mp4">
 </video>
