--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -40,7 +40,8 @@ body {
 
 #video-element {
     position: absolute;
-    top: 50%;
-    left: 50%;
-    margin: -180px 0 0 -240px;
+    top: 0;
+    left: 0;
+    visibility: hidden;
+    //margin: -180px 0 0 -240px;
 }
