Video background further back
Moved videobackground further back. Allowing for text to show.

--- a/app/scripts/templates/videoTemplate.html
+++ b/app/scripts/templates/videoTemplate.html
@@ -1,4 +1,10 @@
 <video id="video-element">
+
   Your browser does not support the video element.
   <source src="images/film.mp4" type="video/mp4">
 </video>
+<div class="text-bubble">
+<h1>Yoloswag4Jesus</h1>
+</div>
+
+
