--- a/app/scripts/templates/parallaxTemplate.html
+++ b/app/scripts/templates/parallaxTemplate.html
@@ -1,7 +1,2 @@
-<section id="home" data-type="background" data-speed="10" class="pages">    
-         <article>I am absolute positioned</article>
-    </section>  
-     
-<section id="about" data-type="background" data-speed="10" class="pages">
-         <article>Simple Parallax Scroll</article>
-</section>    
+<h1 id="anitest">I am absolute positioned</h1>
+<button id="anibutton" type="button">Animate!</button> 
