--- a/app/styles/customanimation.css
+++ b/app/styles/customanimation.css
@@ -88,15 +88,17 @@
 
 	60% {
 		opacity: 1;
-		-webkit-transform: translateY(-30px);
+		-webkit-transform: translateY(100px);
+		-webkit-transform: scale(3);
 	}
 
 	80% {
-		-webkit-transform: translateY(10px);
+		-webkit-transform: translateY(-10px);
 	}
 
 	100% {
 		-webkit-transform: translateY(0);
+		-webkit-transform: scale(1);
 	}
 }
 @-moz-keyframes specialin {
