--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,15 +1,16 @@
 body {
     background: #fafafa;
-    font-family: 1em/1.4 Cambria, Georgia, sans-serif;
+    font-family: Cambria, Georgia, sans-serif;
     /*"Helvetica Neue", Helvetica, Arial, sans-serif;*/
     height: 12000px;
     color: #333;
+    font-size: 1em;
 }
 
 .hero-unit {
     margin: 50px auto 0 auto;
     width: 300px;
-    font-size: 18px;
+    font-size: 1em;
     font-weight: 200;
     line-height: 30px;
     background-color: #eee;
@@ -18,7 +19,7 @@ body {
 }
 
 .hero-unit h1 {
-    font-size: 60px;
+    font-size: 1.25em;
     line-height: 1;
     letter-spacing: -1px;
 }
