Fixed up timeline

--- a/app/scripts/templates/timelineTemplate.html
+++ b/app/scripts/templates/timelineTemplate.html
@@ -1,8 +1,30 @@
+<div class="time-indicator">
+</div>
 <div class="timeline">
-  In Xanadu did Kubla Khan A stately pleasure-dome decree: Where Alph,
-the sacred river, ran Through caverns measureless to man Down to a
-sunless sea.  So twice five miles of fertile ground With walls and
-towers were girdled round; And there were gardens bright with sinuous
-rills, Where blossomed many an incense-bearing tree; And here were
-forests ancient as the hills, Enfolding sunny spots of greenery.
+  <div class="timenav">
+    <div class="time">
+      <div class="time-interval-minor">
+        <div class="minor">
+        </div>
+      </div>
+      <div class="time-interval-major">
+        <span style="left: 200px;">1989</span>
+      </div>
+      <div class="time-interval">
+        <span style="left: 28px;">
+          Mars
+        </span>
+        <span style="left: 301px;">
+          April
+        </span>
+      </div>
+    </div>
+  </div>
+  <div class="timenav-background">
+    <div class="timenav-indicator" style="left: 632px;"></div>
+    <div class="timenav-interval-background">
+      <div class="top-highlight">
+      </div>
+    </div>
+  </div>
 </div>
