--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -5,6 +5,10 @@ body {
     color: #333;
 }
 
+::-webkit-scrollbar {
+    display: none;
+}
+
 .browsehappy {
     margin: 0.2em 0;
     background: #ccc;
@@ -14,28 +18,95 @@ body {
 
 .text-bubble {
     font-size: 40px;
+    z-index: 10;
+    position: absolute;
+}
+
+video.fillWidth {
+    width: 100%;
 }
 
 #video-element {
-    //position: fixed;
+    //overflow: hidden;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100% !important;
     height: auto !important;
     margin: 0;
-    z-index: -1;
+}
+
+
+.time-indicator {
+    position: fixed;
+    bottom: 0px;
+    left: -10px;
+    background-image: url("../images/up_arrow.png");
+    background-repeat: no-repeat;
+    width: 24px;
+    height: 24px;
+    z-index: 31;
 }
 
 .timeline {
+    z-index: 30;
     left: 0;
     bottom: 0;
     position: fixed;
-    //width: 800%;
-    white-space: nowrap;
-    background-color: black;
-    color: white;
+    width: 100%;
+    background-color: white;
+    box-shadow: 0 -1px 3px 0 #e9e9e9;
     margin: 0;
-    padding-top: 3px;
-    font-size: 40px;
-    height: 50px !important;
+    padding: 0;
+    height: 53px !important;
+}
+
+.time-interval-minor {
+    width: 100%;
+    height: 12px;
+    position: absolute;
+    bottom: 6px;
+    background-color: white;
+    background-image: url("../images/timeline_minor.png");
+    background-repeat: repeat-x;
+}
+
+.time-interval {
+    position: absolute;
+    bottom: 25px;
+    width: 100%;
+    white-space: nowrap;
+    height: 15px;
+}
+
+.time-interval span {
+    padding-bottom: 30px;
+    background-image: url("../images/timeline.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    -webkit-font-smoothing: antialiased;
+    color: rgb(102, 102, 102);
+    font-family: 'News Cycle', sans-serif;
+    font-size: 12px;
+    position: absolute;
+}
+
+.time-interval-major {
+    position: absolute;
+    left: 0;
+    width: 100%;
+    bottom: 50px;
+}
+
+.time-interval-major span {
+    padding-bottom: 33px;
+    background-image: url("../images/timeline_major.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    -webkit-font-smoothing: antialiased;
+    color: rgb(102, 102, 102);
+    font-family: 'News Cycle', sans-serif;
+    font-size: 16px;
+    font-weight: 600;
+    position: absolute;
 }
