Changed movie and added events

--- a/app/scripts/templates/timelineTemplate.html
+++ b/app/scripts/templates/timelineTemplate.html
@@ -19,6 +19,10 @@
         </span>
       </div>
     </div>
+    <div id="timeline-events">
+      <div style="left: 140px;"></div>
+      <div style="left: 322px;"></div>
+    </div>
   </div>
   <div class="timenav-background">
     <div class="timenav-indicator" style="left: 632px;"></div>
