--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -4,7 +4,10 @@ body {
     /*"Helvetica Neue", Helvetica, Arial, sans-serif;*/
     height: 12000px;
     color: #333;
-    font-size: 1em;
+}
+
+::-webkit-scrollbar {
+    display: none;
 }
 
 .browsehappy {
