--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,6 +1,6 @@
 body {
     background: #fafafa;
-    font-family: Cambria, Georgia, sans-serif;
+    font-family: 'News Cycle', sans-serif;
     /*"Helvetica Neue", Helvetica, Arial, sans-serif;*/
     height: 12000px;
     color: #333;
@@ -171,7 +171,6 @@ video.fillWidth {
     background-position: center;
     -webkit-font-smoothing: antialiased;
     color: rgb(102, 102, 102);
-    font-family: 'News Cycle', sans-serif;
     font-size: 16px;
     font-weight: 600;
     position: absolute;
@@ -190,7 +189,15 @@ video.fillWidth {
     top: 0;
     left: 0;
     background-color: #fff;
+    color: rgb(102, 102, 102);
+    text-align: center;
     width: 100% !important;
     z-index: 100;
     box-shadow: 0 1px 5px 0 #e9e9e9;
+    font-size: 56px;
+}
+
+#overview span {
+    position: relative;
+    top: 300px;
 }
