new bubble style

--- a/app/scripts/templates/bubble.html
+++ b/app/scripts/templates/bubble.html
@@ -1,1 +1,8 @@
-<div id="newBubble" class="text-bubble animated"><a></a></div>
+<div id="newBubble" class="text-bubble animated">
+  <h1><strong>AXIS</strong></h1>
+  <h2>Augusti 2013</h2>
+
+  In Xanadu did Kubla Khan A stately pleasure-dome decree: Where Alph,
+the sacred river, ran Through caverns measureless to man Down to a
+sunless sea.
+</div>
