--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -18,60 +18,54 @@ body {
 }
 
 .text-bubble {
-    font-size: 40px;
+    line-height:1.2;
+    vertical-align:middle;
+    padding:1.5rem;
+    box-shadow: 0 1px 3px 0 #e9e9e9; /* aaa */
+    background:white;
+    margin:0 1rem 1rem;
+    border-radius: 3px;
+    user-select:none;
     z-index: 10;
-    -webkit-background-clip: border-box;
-    -webkit-background-origin: padding-box;
-    -webkit-background-size: auto;
-    background-attachment: scroll;
-    background-clip: border-box;
-    background-color: rgb(51, 51, 51);
-    background-image: none;
-    background-origin: padding-box;
-    background-size: auto;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-    color: rgb(255, 255, 255);
-    display: block;
-    font-family: Cambria, Georgia, sans-serif;
-    font-size: 1em;
-    font-style: normal;
-    font-variant: normal;
-    font-weight: normal;
-    line-height: 22px;
-    margin-bottom: 48px;
-    margin-left: 0px;
-    margin-right: 0px;
-    margin-top: 50px;
-    padding-bottom: 15px;
-    padding-left: 15px;
-    padding-right: 15px;
-    padding-top: 15px;
+    /* animation:fly-in-from-left .5s 1s ease both; */
+    /* transform-origin:top left; */
     position: fixed;
-    text-align: left;
-    width: fit;
-    height: height;
+    width: 330px;
+}
+
+.text-bubble > * {
+    margin: 0;
+}
+
+.text-bubble h1 {
+  font-size: 2rem;
+  font-weight: 200;
+}
+
+.text-bubble strong {
+    font-weight:300;
+    color:#539D00;
+}
+
+.text-bubble h2 {
+    font-size: 16px;
+    line-height: 5px;
+    color:gray;
+    font-weight:400;
+    margin-bottom: 14px;
+}
+
+.text-bubble .map {
+    height:12rem;
+    background:whitesmoke;
+    /* margin:.5rem 0 0 -1.5rem; */
+    margin: 0;
+    padding: 0;
+    width:28rem;
 }
 
 video.fillWidth {
     width: 100%;
-}
-
-.text-bubble:before{
-    top: -20px;
-    bottom: auto;
-    left: auto;
-    right: 60px;
-    border: 0;
-    border-left-width: 30px;
-    border-top-width: 20px;
-    border-color: transparent #c81e2b;
-}
-
-.text-bubble a{
-    color:yellow;
 }
 
 #video-element {
