--- a/app/scripts/templates/bubble.html
+++ b/app/scripts/templates/bubble.html
@@ -1,8 +1,11 @@
 <div id="newBubble" class="text-bubble animated">
   <h1><strong>AXIS</strong></h1>
   <h2>Augusti 2013</h2>
-
+  <p>
   In Xanadu did Kubla Khan A stately pleasure-dome decree: Where Alph,
 the sacred river, ran Through caverns measureless to man Down to a
 sunless sea.
+  </p>
+  <div class="image"
+       style="background-image: url('http://sites.adult-empire.com/7686/img/h_04.jpg')"></div>
 </div>
