Added profile pic

--- a/app/scripts/templates/overviewTemplate.html
+++ b/app/scripts/templates/overviewTemplate.html
@@ -1,3 +1,5 @@
 <div id="overview">
-  <span id="intro-text"></span>
+  <div id="profile-pic"></div>
+  <span id="intro-text">per holm</span><br>
+  <span id="intro-title"></span>
 </div>
