--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -193,13 +193,32 @@ video.fillWidth {
     background-color: #fff;
     color: rgb(102, 102, 102);
     text-align: center;
-    width: 100% !important;
+    width: 100%;
     z-index: 100;
     box-shadow: 0 1px 5px 0 #e9e9e9;
-    font-size: 56px;
+    padding-top: 90px;
 }
 
-#overview span {
-    position: relative;
-    top: 300px;
+
+#overview #intro-text {
+    font-size: 78px;
+    letter-spacing: 8px;
+}
+
+#overview #intro-title {
+    font-size: 30px;
+    font-weight: 700;
+    text-align: left;
+}
+
+#overview #profile-pic {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 400px;
+    height: 400px;
+    border-radius: 200px;
+    background-color: red;
+    background: url('../images/profile.png') no-repeat;
+    margin-bottom: 50px;
 }
