new bubble code

--- a/app/scripts/templates/bubble.html
+++ b/app/scripts/templates/bubble.html
@@ -1,11 +1,11 @@
 <div id="newBubble" class="text-bubble animated">
-  <h1><strong>AXIS</strong></h1>
-  <h2>Augusti 2013</h2>
+  <h1><strong><%= title %></strong></h1>
+  <h2><%= date %></h2>
   <p>
-  In Xanadu did Kubla Khan A stately pleasure-dome decree: Where Alph,
-the sacred river, ran Through caverns measureless to man Down to a
-sunless sea.
+    <% mainText %>
   </p>
-  <!-- <div class="image" -->
+  <% if (image) { %>
+  <div class="image"></div>
+  <% } %>
   <!--      style="background-image: url('http://sites.adult-empire.com/7686/img/h_04.jpg')"></div> -->
 </div>
