--- a/app/scripts/templates/bubble.html
+++ b/app/scripts/templates/bubble.html
@@ -2,7 +2,7 @@
   <h1><strong><%= title %></strong></h1>
   <h2><%= date %></h2>
   <p>
-    <% mainText %>
+    <%= mainText %>
   </p>
   <% if (image) { %>
   <div class="image"></div>
